local file saved

--- a/studs/pur.html
+++ b/studs/pur.html
@@ -49,7 +49,7 @@
     </nav>
     <section>
         <h1>Purity Gumede</h1>
-        <img src="/pics/unkno.jpeg" alt="tino">
+        <img src="/pics/unkno.jpeg" alt="pur">
         <p>
             Étudiant en biologie passionné par les mathématiques, [Nom de l'étudiant] est actuellement en troisième année de ses études universitaires. Cet été, il a eu l'opportunité de mener des recherches passionnantes dans le cadre d'un programme de recherche estivale à un collège historiquement noir. Son projet de recherche se concentre sur l'étude des paramètres cinétiques des nanofibres.
 
