added pictures and adjusted the the formating

--- a/facul/trac.html
+++ b/facul/trac.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <nav>
+    <nav class="navbrown">
         <a href="/index.html"><img src="/pics/logo.png" alt="M-Pure Logo"></a>
         <ul id="ulnav">
             <li id="lisitmain"><a href="/index.html">Home</a></li>
@@ -40,6 +40,8 @@
                     <li id="lisit"><a href="/studs/sae.html">Saeed</a></li>
                     <li id="lisit"><a href="/studs/tan.html">Tanaka</a></li>
                     <li id="lisit"><a href="/studs/tas.html">Taisia</a></li>
+                    <li id="lisit"><a href="/studs/john.html">John</a></li>
+                    <li id="lisit"><a href="/studs/josh.html">Joshua</a></li>
                 </ul>
             </li>
             <li id="lisitmain"><a href="/our.html">Our Work</a></li>
@@ -47,5 +49,45 @@
             
         </ul>
     </nav>
+    <section>
+        <br><br><h1 class="name"> Dr. Tracy Brown </h1><br><br>
+        <img src="/pics/brown.jpg" alt="tracy brown">
+        <p class="brownpara">
+           
+
+I am an assistant professor of chemistry at Johnson C. Smith University (JCSU) in the Department of Natural and Behavioral Sciences 
+(NBS) in Charlotte, North Carolina. I have been teaching organic chemistry for over eight years. I have an ongoing cooperative research 
+and development agreement (CRADA) with Forest Products Laboratory, in Madison, Wisconsin. Through this agreement, NBS has supplied 
+cellulose nanomaterials for the development of research projects centered on studying cellulose nanomaterials and their applications. 
+To date, I have developed several undergraduate research projects on cellulose nanomaterials for students as well as served as a research 
+advisor on senior investigative projects (SIPs) – a requirement necessary for graduation. Furthermore, these undergraduate research 
+projects have led to oral and poster presentations at national conferences, including National Organization for Black Chemists and
+ Chemical Engineers (NOBCChE) and the American Chemical Society (ACS).  As a junior faculty member, I have been awarded several 
+ institutional research grants to explore research interests in improving student education and research experiences in STEM disciplines.
+ I have also had research experiences with faculty and scientists at the Georgia Institute of Technology in Atlanta, GA, and the National 
+ Aeronautics and Space Administration (NASA) in Cleveland, OH, where I had conducted research on modifying the chemistry and/or improving 
+ upon the physical and mechanical properties of high-performance polymeric matrices and high-molecular-weight polymers with the addition 
+ of nanomaterials (e.g. carbon nanotubes, carbon nanofibers, or nanoporous zeolites) at both places.
+
+I have been awarded 700K as the Principal Investigator on two National Science Foundation (NSF) grants, #1818708 and #2101209, to 
+provide and support undergraduate research opportunities at JCSU. These grants have also helped to establish the Thermal Analysis 
+Instrumentation (TAI) suite. The suite consists of a differential scanning calorimetry (DSC), a thermogravimetric analyzer (TGA), 
+a thermomechanical analyzer (TMA), and a rheometer. To ensure that our students are marketable upon graduation, I have developed a 
+TAI technical certificate program to complement student learning through course undergraduate resource experiences (CUREs) and/or r
+esearch projects utilizing the equipment in the TAI suite.
+
+Currently, I have two research programs, NSF Student Minigrant Program and Minority – Polymer Undergraduate Research Experiences 
+(M-PURE) program, with nearly 20 students currently participating in research activities and projects. To date, nearly 50 students 
+have participated in research opportunities, and 25+ students have received technical certificates through the TAI certificate program.
+ I plan to continue to work hard for my students to bring research opportunities the JCSU because there “cannot be growth if there are 
+ no opportunities.” 1/2
+hashtag
+#mpureresearch
+hashtag
+#polymers
+
+
+        </p>
+    </section>
 </body>
 </html>
