--- a/studs/del.html
+++ b/studs/del.html
@@ -40,6 +40,8 @@
                     <li id="lisit"><a href="/studs/sae.html">Saeed</a></li>
                     <li id="lisit"><a href="/studs/tan.html">Tanaka</a></li>
                     <li id="lisit"><a href="/studs/tas.html">Taisia</a></li>
+                    <li id="lisit"><a href="/studs/john.html">John</a></li>
+                    <li id="lisit"><a href="/studs/josh.html">Joshua</a></li>
                 </ul>
             </li>
             <li id="lisitmain"><a href="/our.html">Our Work</a></li>
@@ -48,14 +50,17 @@
         </ul>
     </nav>
     <section>
-        <h1>Delaney Hill</h1>
+        <br><br><h1 class="name">Delaney Hill</h1><br><br>
         <img src="/pics/del.jpg" alt="dela">
-        <p>
-            Étudiant en biologie passionné par les mathématiques, [Nom de l'étudiant] est actuellement en troisième année de ses études universitaires. Cet été, il a eu l'opportunité de mener des recherches passionnantes dans le cadre d'un programme de recherche estivale à un collège historiquement noir. Son projet de recherche se concentre sur l'étude des paramètres cinétiques des nanofibres.
+        <p class="bio">
+            I am Delaney Hill; I was born in Maryland and grew up in Charlotte. I am currently a Junior Undergraduate at JCSU. 
+            I am a biology major with a chemistry minor. I work at Walgreens, crochet, and lead the JCSU pre-health professionals
+             club in my free time. In the M-PURE program, I study the physical characteristics of various chars added to polyimide.
+              In the future, I intend to become a dentist, participating in clinical research and encouraging patient advocacy. 
+              Participating in the MPURE program will allow me to build my manual dexterity and use technology that I may use again
+               in the future for research.
+#research #mpureresearch #polymers
 
-[Nom de l'étudiant] a toujours été fasciné par la biologie et les aspects quantitatifs de la science. Ses compétences mathématiques exceptionnelles ont été un atout précieux pour son travail de recherche, lui permettant d'analyser les données complexes et de comprendre en profondeur les mécanismes des nanofibres.
-
-Après l'obtention de son diplôme, [Nom de l'étudiant] aspire à devenir médecin, combinant ainsi sa passion pour la biologie et son amour des mathématiques pour contribuer à l'avancement de la médecine. Ses travaux de recherche à ce collège historiquement noir sont une étape importante dans la réalisation de ses objectifs académiques et professionnels.
         </p>
     </section>
 </body>
