--- a/studs/josh.html
+++ b/studs/josh.html
@@ -50,16 +50,14 @@
         </ul>
     </nav>
     <section>
-        <br><br><h1 class="name">Tinotenda Musingarimi</h1><br><br>
-        <img src="/pics/tino.jpg" alt="tino">
+        <br><br><h1 class="name">Joshua</h1><br><br>
+        <img src="/pics/unkno.jpeg" alt="dela">
         <p class="bio">
-            Tinotenda Musingarimi is a Junior majoring in Information Systems Engineering with a minor in Cyber Security.
-             A Masvingo native, the oldest city in Zimbabwe - a small landlocked country in Southern Africa. He enjoys mathematics
-              and programming. Tinotenda is the president of Alpha Lambda National Honor Society and also serves as the Treasurer
-              for NILE - an organization that promotes academic excellence among black male students to pursue higher education.
-               Tinotenda is the lead Web Developer for MPURE’s website project and also works with a team of other data analysts
-                to interpret the results of the experiments mathematically.
-
+            Hello, my name is Joshua Beatty, and I am from Wilmington, NC. I am currently a senior studying Biology with a minor in Chemistry.
+             Along with being a part of the men's football team at JCSU, I am also a member of the Louis Stokes Alliance for Minority Participation
+              (LSAMP) and the Minority Association of Pre-Medical Students (MAPS). As part of M-PURE, I have been given the opportunity 
+              to study lignin, a biobased polymer, and its effects as an additive in synthetic polymers such aspolybenzimidazole. This program has 
+              greatly boosted my confidence and knowledge of the sciences, preparing me for a career in medicine upon graduation.
         </p>
     </section>
 </body>
