--- a/studs/nya.html
+++ b/studs/nya.html
@@ -40,6 +40,8 @@
                     <li id="lisit"><a href="/studs/sae.html">Saeed</a></li>
                     <li id="lisit"><a href="/studs/tan.html">Tanaka</a></li>
                     <li id="lisit"><a href="/studs/tas.html">Taisia</a></li>
+                    <li id="lisit"><a href="/studs/john.html">John</a></li>
+                    <li id="lisit"><a href="/studs/josh.html">Joshua</a></li>
                 </ul>
             </li>
             <li id="lisitmain"><a href="/our.html">Our Work</a></li>
@@ -48,9 +50,9 @@
         </ul>
     </nav>
     <section>
-        <h1>Nyasia Weatherly</h1>
+        <br><br><h1 class="name">Nyasia Weatherly</h1><br><br>
         <img src="/pics/unkno.jpeg" alt="nya">
-        <p>
+        <p class="bio"> 
             Étudiant en biologie passionné par les mathématiques, [Nom de l'étudiant] est actuellement en troisième année de ses études universitaires. Cet été, il a eu l'opportunité de mener des recherches passionnantes dans le cadre d'un programme de recherche estivale à un collège historiquement noir. Son projet de recherche se concentre sur l'étude des paramètres cinétiques des nanofibres.
 
 [Nom de l'étudiant] a toujours été fasciné par la biologie et les aspects quantitatifs de la science. Ses compétences mathématiques exceptionnelles ont été un atout précieux pour son travail de recherche, lui permettant d'analyser les données complexes et de comprendre en profondeur les mécanismes des nanofibres.
