--- a/studs/pur.html
+++ b/studs/pur.html
@@ -40,6 +40,8 @@
                     <li id="lisit"><a href="/studs/sae.html">Saeed</a></li>
                     <li id="lisit"><a href="/studs/tan.html">Tanaka</a></li>
                     <li id="lisit"><a href="/studs/tas.html">Taisia</a></li>
+                    <li id="lisit"><a href="/studs/john.html">John</a></li>
+                    <li id="lisit"><a href="/studs/josh.html">Joshua</a></li>
                 </ul>
             </li>
             <li id="lisitmain"><a href="/our.html">Our Work</a></li>
@@ -48,14 +50,16 @@
         </ul>
     </nav>
     <section>
-        <h1>Purity Gumede</h1>
-        <img src="/pics/unkno.jpeg" alt="pur">
-        <p>
-            Étudiant en biologie passionné par les mathématiques, [Nom de l'étudiant] est actuellement en troisième année de ses études universitaires. Cet été, il a eu l'opportunité de mener des recherches passionnantes dans le cadre d'un programme de recherche estivale à un collège historiquement noir. Son projet de recherche se concentre sur l'étude des paramètres cinétiques des nanofibres.
+        <br><br><h1 class="name">Purity Gumede</h1><br><br>
+        <img src="/pics/purity.jpg" alt="pur">
+        <p class="bio">
+            My name is Purity Gumede, and I am from Zimbabwe. I am a sophomore majoring in Computer Science/Information Systems with a minor
+             in Data Science. I am a member of various clubs and organizations on campus. I serve as a Golden Bulls Brand Ambassador and 
+             participate in the Career Ambassador Program. I currently serve as Miss Duke Hall and Miss International Students. I love 
+             watching shows and being in the midst of nature during my free time. I’m also a big fan of novels.
 
-[Nom de l'étudiant] a toujours été fasciné par la biologie et les aspects quantitatifs de la science. Ses compétences mathématiques exceptionnelles ont été un atout précieux pour son travail de recherche, lui permettant d'analyser les données complexes et de comprendre en profondeur les mécanismes des nanofibres.
+I am studying the decomposition of CNCs and CNFs using the TGA and the DSC. Together with my research group, we are examining the effect of changes in heating rates on the decomposition of the above-mentioned chemical substances. I am working towards becoming a Data Analyst in the future. I am truly grateful for the opportunity to participate in the MPURE program which is giving me a platform to practice and sharpen my data analytics skills, therefore acting as a stepping stone to my desired career. 
 
-Après l'obtention de son diplôme, [Nom de l'étudiant] aspire à devenir médecin, combinant ainsi sa passion pour la biologie et son amour des mathématiques pour contribuer à l'avancement de la médecine. Ses travaux de recherche à ce collège historiquement noir sont une étape importante dans la réalisation de ses objectifs académiques et professionnels.
         </p>
     </section>
 </body>
