--- a/studs/sae.html
+++ b/studs/sae.html
@@ -40,6 +40,8 @@
                     <li id="lisit"><a href="/studs/sae.html">Saeed</a></li>
                     <li id="lisit"><a href="/studs/tan.html">Tanaka</a></li>
                     <li id="lisit"><a href="/studs/tas.html">Taisia</a></li>
+                    <li id="lisit"><a href="/studs/john.html">John</a></li>
+                    <li id="lisit"><a href="/studs/josh.html">Joshua</a></li>
                 </ul>
             </li>
             <li id="lisitmain"><a href="/our.html">Our Work</a></li>
@@ -48,14 +50,18 @@
         </ul>
     </nav>
     <section>
-        <h1>Saeed Dupree</h1>
+        <br><br><h1 class="name">Saeed Dupree</h1><br><br>
         <img src="/pics/sae.jpg" alt="sae">
-        <p>
-            Étudiant en biologie passionné par les mathématiques, [Nom de l'étudiant] est actuellement en troisième année de ses études universitaires. Cet été, il a eu l'opportunité de mener des recherches passionnantes dans le cadre d'un programme de recherche estivale à un collège historiquement noir. Son projet de recherche se concentre sur l'étude des paramètres cinétiques des nanofibres.
+        <p class="bio">
+            Hey everyone, I am Saeed Dupree, the senior researcher in the M-PURE program. I am a Junior at JCSU, majoring in Chemistry and
+             Biology. At JCSU, I am a part of the Track and Field team and the Pre-Med Club, and I enjoy doing 3D printing as a hobby. After
+              JCSU, I plan to attend medical school and become a urologist. In the M-Pure project, I am the person in charge of running 
+              experiments on the Cellulose NF in the FTIR, TGA, and DSC. The M-Pure program will help me better understand polymers and 
+              the structural changes that happen when heat is applied, which will help me better understand polymers and their medical 
+              applications during medical school.
+hashtag
+#mpureresearch
 
-[Nom de l'étudiant] a toujours été fasciné par la biologie et les aspects quantitatifs de la science. Ses compétences mathématiques exceptionnelles ont été un atout précieux pour son travail de recherche, lui permettant d'analyser les données complexes et de comprendre en profondeur les mécanismes des nanofibres.
-
-Après l'obtention de son diplôme, [Nom de l'étudiant] aspire à devenir médecin, combinant ainsi sa passion pour la biologie et son amour des mathématiques pour contribuer à l'avancement de la médecine. Ses travaux de recherche à ce collège historiquement noir sont une étape importante dans la réalisation de ses objectifs académiques et professionnels.
         </p>
     </section>
 </body>
