--- a/studs/tan.html
+++ b/studs/tan.html
@@ -40,6 +40,8 @@
                     <li id="lisit"><a href="/studs/sae.html">Saeed</a></li>
                     <li id="lisit"><a href="/studs/tan.html">Tanaka</a></li>
                     <li id="lisit"><a href="/studs/tas.html">Taisia</a></li>
+                    <li id="lisit"><a href="/studs/john.html">John</a></li>
+                    <li id="lisit"><a href="/studs/josh.html">Joshua</a></li>
                 </ul>
             </li>
             <li id="lisitmain"><a href="/our.html">Our Work</a></li>
@@ -48,14 +50,17 @@
         </ul>
     </nav>
     <section>
-        <h1>Tanaka Mbavarira</h1>
-        <img src="/pics/unkno.jpeg" alt="tan">
-        <p>
-            Étudiant en biologie passionné par les mathématiques, [Nom de l'étudiant] est actuellement en troisième année de ses études universitaires. Cet été, il a eu l'opportunité de mener des recherches passionnantes dans le cadre d'un programme de recherche estivale à un collège historiquement noir. Son projet de recherche se concentre sur l'étude des paramètres cinétiques des nanofibres.
+        <br><br><h1 class="name">Tanaka Mbavarira</h1><br><br>
+        <img src="/pics/tanaka.jpg" alt="tan">
+        <p class="bio">
+            My name is Tanaka Mbavarira. I am a junior majoring in Computer Engineering with a minor in Mathematics at Johnson C Smith 
+            University. I am from Bulawayo, Zimbabwe. I am always looking for innovative ways to problem-solving and actively take up 
+            any opportunities to solve complex problems. I have participated in competitions like the NASA Minds Undergraduate Student 
+            Design and the HBCU Battle of the Brains. I am a member of the National Society of Black Engineers, Smith Tech Innovation
+            Institute, and Career Pathways Academy.
 
-[Nom de l'étudiant] a toujours été fasciné par la biologie et les aspects quantitatifs de la science. Ses compétences mathématiques exceptionnelles ont été un atout précieux pour son travail de recherche, lui permettant d'analyser les données complexes et de comprendre en profondeur les mécanismes des nanofibres.
+As part of the M-PURE program, I will be working with the Data Analysis team to collect, organize, and analyze data to come up with insights into how polymer morphology affects a polymer’s overall properties and behavior. I am also learning the best practices for operating high-tech modern-day instrumentation to analyze and interpret data from natural and synthetic polymers. The M-PURE program will help me hone my data analysis skills. I will use these skills post-graduation in my career to make data-driven decisions. I will also be handling the social media pages to create awareness and drive engagement in our research project.
 
-Après l'obtention de son diplôme, [Nom de l'étudiant] aspire à devenir médecin, combinant ainsi sa passion pour la biologie et son amour des mathématiques pour contribuer à l'avancement de la médecine. Ses travaux de recherche à ce collège historiquement noir sont une étape importante dans la réalisation de ses objectifs académiques et professionnels.
         </p>
     </section>
 </body>
