--- a/progs/biobas.html
+++ b/progs/biobas.html
@@ -40,6 +40,8 @@
                     <li id="lisit"><a href="/studs/sae.html">Saeed</a></li>
                     <li id="lisit"><a href="/studs/tan.html">Tanaka</a></li>
                     <li id="lisit"><a href="/studs/tas.html">Taisia</a></li>
+                    <li id="lisit"><a href="/studs/john.html">John</a></li>
+                    <li id="lisit"><a href="/studs/josh.html">Joshua</a></li>
                 </ul>
             </li>
             <li id="lisitmain"><a href="/our.html">Our Work</a></li>
