--- a/stud.html
+++ b/stud.html
@@ -29,17 +29,19 @@
             <li id="lisitmain">
                 <a href="stud.html">Students</a>
                 <ul id="lusut">
-                    <li id="lisit"><a href="studs/tino.html">Tinotenda</a></li>
-                    <li id="lisit"><a href="studs/del.html">Delainey</a></li>
-                    <li id="lisit"><a href="studs/aug.html">Augustine</a></li>
-                    <li id="lisit"><a href="studs/jer.html">Jerome</a></li>
-                    <li id="lisit"><a href="studs/ken.html">Kennedy</a></li>
-                    <li id="lisit"><a href="studs/khur.html">Khursten</a></li>
-                    <li id="lisit"><a href="studs/nya.html">Nyasia</a></li>
-                    <li id="lisit"><a href="studs/pur.html">Purity</a></li>
-                    <li id="lisit"><a href="studs/sae.html">Saeed</a></li>
-                    <li id="lisit"><a href="studs/tan.html">Tanaka</a></li>
-                    <li id="lisit"><a href="studs/tas.html">Taisia</a></li>
+                    <li id="lisit"><a href="/studs/tino.html">Tinotenda</a></li>
+                    <li id="lisit"><a href="/studs/del.html">Delainey</a></li>
+                    <li id="lisit"><a href="/studs/aug.html">Augustine</a></li>
+                    <li id="lisit"><a href="/studs/jer.html">Jerome</a></li>
+                    <li id="lisit"><a href="/studs/ken.html">Kennedy</a></li>
+                    <li id="lisit"><a href="/studs/khur.html">Khursten</a></li>
+                    <li id="lisit"><a href="/studs/nya.html">Nyasia</a></li>
+                    <li id="lisit"><a href="/studs/pur.html">Purity</a></li>
+                    <li id="lisit"><a href="/studs/sae.html">Saeed</a></li>
+                    <li id="lisit"><a href="/studs/tan.html">Tanaka</a></li>
+                    <li id="lisit"><a href="/studs/tas.html">Taisia</a></li>
+                    <li id="lisit"><a href="/studs/john.html">John</a></li>
+                    <li id="lisit"><a href="/studs/josh.html">Joshua</a></li>
                 </ul>
             </li>
             <li id="lisitmain"><a href="our.html">Our Work</a></li>
