--- a/studs/jer.html
+++ b/studs/jer.html
@@ -40,6 +40,8 @@
                     <li id="lisit"><a href="/studs/sae.html">Saeed</a></li>
                     <li id="lisit"><a href="/studs/tan.html">Tanaka</a></li>
                     <li id="lisit"><a href="/studs/tas.html">Taisia</a></li>
+                    <li id="lisit"><a href="/studs/john.html">John</a></li>
+                    <li id="lisit"><a href="/studs/josh.html">Joshua</a></li>
                 </ul>
             </li>
             <li id="lisitmain"><a href="/our.html">Our Work</a></li>
@@ -48,14 +50,15 @@
         </ul>
     </nav>
     <section>
-        <h1>Jerome Adonis</h1>
-        <img src="/pics/unkno.jpeg" alt="jer">
-        <p>
-            Étudiant en biologie passionné par les mathématiques, [Nom de l'étudiant] est actuellement en troisième année de ses études universitaires. Cet été, il a eu l'opportunité de mener des recherches passionnantes dans le cadre d'un programme de recherche estivale à un collège historiquement noir. Son projet de recherche se concentre sur l'étude des paramètres cinétiques des nanofibres.
+        <br><br><h1 class="name">Jerome Adonis</h1><br><br>
+        <img src="/pics/jerome.jpg" alt="jer">
+        <p class="bio">
+            My name is J'erome Harsant Adonis, and I am from Harare, Zimbabwe. I am a junior majoring in Computer Engineering. I am a 
+            member of various clubs and organizations on campus. I am a member of the National Society for Black Engineers, JCSU Esports 
+            Club, Game Development Club, and Phi Beta Sigma Fraternity Incorporated.
 
-[Nom de l'étudiant] a toujours été fasciné par la biologie et les aspects quantitatifs de la science. Ses compétences mathématiques exceptionnelles ont été un atout précieux pour son travail de recherche, lui permettant d'analyser les données complexes et de comprendre en profondeur les mécanismes des nanofibres.
+I am a data analyst and software developer for the M-PURE program. Together with my research group, we are examining the effect of changes in heating rates on the decomposition of chemical substances. I am going to be an Artificial Intelligence Developer post-graduation. The M-PURE program will help me sharpen my data science skills and work on my front-end development skills to create a website. I will work with the marketing team to create our social media pages and drive engagement.
 
-Après l'obtention de son diplôme, [Nom de l'étudiant] aspire à devenir médecin, combinant ainsi sa passion pour la biologie et son amour des mathématiques pour contribuer à l'avancement de la médecine. Ses travaux de recherche à ce collège historiquement noir sont une étape importante dans la réalisation de ses objectifs académiques et professionnels.
         </p>
     </section>
 </body>
